public interface CommandFactory
{
	Command createCommand();
}
